# Multi-Source-ETL

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: POWER_BI_SEMANTIC_MODEL_DESIGN.md  powerbi_vm_workflow.md  source_schema.md  stage10_dashboard_pages.md  stage14_interview_prep.md  stage8_powerbi.md  stage9_dax_measures.md
docs/screenshots/: README.md
notebooks/: 01_eda_sales.ipynb
scripts/: test_db_connection.py
sql/ddl/: 00_init.sql  01_schemas.sql  02_pipeline_metadata.sql  03_source_system.sql  04_gold_schema.sql  05_data_quality.sql  06_powerbi_readiness.sql
sql/queries/: check_connection.sql  row_counts.sql
src/extract/: config.py  extract_api.py  extract_db.py  extract_file.py  extract_flat_files.py  extract_fx.py  extract_olist_csvs.py  extract_weather.py
src/load/: load_to_warehouse.py
src/orchestration/: pipeline.py
src/quality/: __init__.py  checks.py  runner.py
src/setup/: load_source_db.py
src/transform/: build_dimensions.py  build_facts.py  gold_utils.py  schemas.py  transform_fx.py  transform_payments.py  transform_sales.py  transform_weather.py  utils.py
src/utils/: db.py  logger.py  validators.py
tests/: conftest.py  test_db_connection.py  test_gold_utils.py  test_schemas.py  test_silver_utils.py  test_transform_functions.py  test_transforms.py  test_validators.py
